[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py38"
line-length = 120
select = ["E", "F", "W", "I"]   # Basic PEP8 rules (E,W), F is for pyflakes
ignore = ["E501"]          # Ignore line too long (can be ignored for now if you want to fix it incrementally)
fix = true                 # Allow auto-fixing
show-fixes = true
exclude = [".git", "__pycache__", "build", "dist", "venv"]

[tool.ruff.isort]
known-first-party = ["starrocks"]
combine-as-imports = true
force-sort-within-sections = true
lines-after-imports = 2

[tool.black]
target-version = ["py38", "py39", "py310"]
line-length = 120
skip-string-normalization = false
include = '\.pyi?$'


[tool.pytest.ini_options]
addopts = "--tb native -v -r fxX --maxfail=500 -p no:warnings"
testpaths = ["test/"]

# Integration test markers
markers = [
    "integration: marks tests as integration tests (require real database)",
    "slow: marks tests as slow running",
]

# Logging configuration
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)s] %(name)s.%(funcName)s:%(lineno)d: %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
